2007-09-30  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/base.py (map_branches): when referring to
	branches through WebStatus (i.e. by appending ?branch=FOO query
	arguments to the URL), make "trunk" mean trunk, by mapping it to
	None before passing it to generateFinishedBuilds() and the like.
	* buildbot/status/web/baseweb.py (OneLinePerBuild.body): same
	(OneBoxPerBuilder.body): same, also improve display of branches in
	the HTML a bit
	* buildbot/status/web/waterfall.py (BuildTopBox.getBox): same
	(WaterfallStatusResource.buildGrid): same. Note that this filters
	Changes as well as Builds.
	* docs/buildbot.texinfo (Buildbot Web Resources): remove the
	caveat about trunk branches, now that it's fixed

	* buildbot/status/web/base.py (OneLineMixin): refactor, move this
	from builder.py, use it on the Builder page too

	* buildbot/status/web/builder.py (StatusResourceBuilder): same
	* buildbot/status/web/baseweb.py (OneLinePerBuild): display branch
	names, add some CSS classes
	* buildbot/status/web/classic.css (td.box): new class, for
	OneBoxPerBuild

	* docs/buildbot.texinfo (WebStatus): update docs

	* buildbot/slave/commands.py (SVN.parseGotRevision._parse): remove
	the trailing "M" indicator that tells us this is a modified file.
	This should help with mode="update" builds that modify files
	in-place. Thanks to "Oz" (chris at santacruzgames.com) for the
	patch.

	* buildbot/scripts/runner.py (upgradeMaster): improvements: write
	new copies of files (to .new) when those files already exist,
	check the master.cfg file for errors (and give DeprecationWarnings
	a chance to be displayed).
	* buildbot/test/test_runner.py: add more tests
	* docs/buildbot.texinfo (Upgrading an Existing Buildmaster): docs

2007-09-29  Brian Warner  <warner@lothar.com>

	* buildbot/steps/source.py (Mercurial.computeSourceRevision): take
	the revision id from the last change in our list, since that's the
	best we can do without knowing the full ancestry graph. Closes #103.
